--- a/public/stylesheet/admin/coupons.css
+++ b/public/stylesheet/admin/coupons.css
@@ -139,6 +139,7 @@ body {
     margin-left: 10px;
     color: #fff;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .coupons-table .action-icon:hover {
