--- a/views/admin/orders.ejs
+++ b/views/admin/orders.ejs
@@ -251,7 +251,7 @@
 
     <!-- Sales Report Modal -->
     <div class="modal-overlay" id="salesReportModal">
-        <input type="hidden" id="orders" value="<%= JSON.stringify(orders)%>">
+        <input type="hidden" id="orders" value="<%= JSON.stringify(order)%>">
         <div class="modal-content sales-report-modal">
             <div class="modal-header">
                 Sales Report
