--- a/views/user/page-404.ejs
+++ b/views/user/page-404.ejs
@@ -28,6 +28,10 @@
     <div class="additional-message">
         <p><%= additionalMessage %></p>
     </div>
+    <% }else{ %>
+    <div class="additional-message">
+        <p>എന്താ മോനെ നിനക്കിവിടേ 🤨</p>
+    </div>
     <% } %>
 
 
