--- a/views/user/page-404.ejs
+++ b/views/user/page-404.ejs
@@ -30,7 +30,7 @@
     </div>
     <% }else{ %>
     <div class="additional-message">
-        <p>എന്താ മോനെ നിനക്കിവിടേ 🤨</p>
+        <img src="/images/blog/funny.jpg" alt="Funny Emoji">
     </div>
     <% } %>
 
