--- a/public/stylesheet/user/home.css
+++ b/public/stylesheet/user/home.css
@@ -41,7 +41,7 @@ body {
 .hero-content h1 {
     font-size: 48px;
     margin-bottom: 30px;
-    color: #0891b2;
+    color: #eb8d00;
 }
 
 .cta-buttons {
