--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -19,8 +19,8 @@
     <input type="hidden" id="allProducts" value="<%= JSON.stringify(products)%>">
     <section class="hero">
         <div class="hero-content">
-            <h1>Canon camera</h1>
-            <h1>Your dreams on your hand</h1>
+            <h1>Dream Big</h1>
+            <h1>Create with Confidence</h1>
         </div>
         <div class="hero-image">
             <img src="<%= locals.heroImage || '/images/Products/Canon/Camera/EOS RS 5 MARK II/Canon RS 5.webp' %>" alt="Canon Camera">
